src/test/deca/context/valid/provided/return_new_type.deca
// Descrption : on essaye de renvoyer une variable de type class A ;

class A {

}

class B {
	A a = new A();
	A test(){
		return this.a ;
	}
}

