src/test/deca/context/invalid/provided/UnknownType.deca
// DESCRIPTION : Déclaration de variable avec un type inconnu
//RESULTAT: Cannot find type ! (0.2)
{
    Ajja i = 12;
}
